# tsinghua_cloud_auto_download_all

./: main.py  pyproject.toml  readme.md  tsinghua_cloud_auto_download_all.py
backend/: .gitignore  doc.private.md  main.py
backend/src/: core.py  schema.py  utils.py
backend/src/downloader/: multiple.py  single.py
frontend/: package-lock.json  package.json
frontend/src/: schema.ts  store.ts  utils.ts
frontend/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: main.rs  schema.rs  utils.rs
frontend/src/app/: layout.tsx  page.default.tsx  page.tsx
frontend/src/components/: dir.tsx  dirs.tsx  input.tsx
frontend/src/providers/: theme.tsx
src/: config.py  core.py  schema.py
